<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/watch_face_background"
        android:layout_width="@dimen/settings_preview_size"
        android:layout_height="@dimen/settings_preview_size"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/settings_watch_face_preview_background"/>


    <ImageView
        android:id="@+id/complication_ne_background"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/added_round_complication"
        style="?android:borderlessButtonStyle"
        android:contentDescription="@string/complication_ne_name"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/watch_face_background"
        android:layout_alignEnd="@+id/watch_face_background"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="8dp" />

    <ImageButton
        android:id="@+id/complication_ne"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        style="?android:borderlessButtonStyle"
        android:contentDescription="@string/complication_ne_name"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/complication_ne_background"
        android:layout_alignStart="@+id/complication_ne_background" />

    <ImageView
        android:id="@+id/complication_e_background"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/added_round_complication"
        style="?android:borderlessButtonStyle"
        android:contentDescription="@string/complication_e_name"
        android:background="@android:color/transparent"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/watch_face_background" />

    <ImageButton
        android:id="@+id/complication_e"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        style="?android:borderlessButtonStyle"
        android:contentDescription="@string/complication_e_name"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/complication_e_background"
        android:layout_alignStart="@+id/complication_e_background" />

    <ImageView
        android:id="@+id/complication_se_background"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/added_round_complication"
        style="?android:borderlessButtonStyle"
        android:contentDescription="@string/complication_se_name"
        android:background="@android:color/transparent"
        android:layout_alignBottom="@+id/watch_face_background"
        android:layout_alignEnd="@+id/watch_face_background"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp" />

    <ImageButton
        android:id="@+id/complication_se"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        style="?android:borderlessButtonStyle"
        android:contentDescription="@string/complication_se_name"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/complication_se_background"
        android:layout_alignStart="@+id/complication_se_background" />

    <ImageView
        android:id="@+id/complication_sw_background"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/added_round_complication"
        style="?android:borderlessButtonStyle"
        android:contentDescription="@string/complication_sw_name"
        android:background="@android:color/transparent"
        android:layout_alignBottom="@+id/watch_face_background"
        android:layout_alignStart="@+id/watch_face_background"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="8dp" />

    <ImageButton
        android:id="@+id/complication_sw"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        style="?android:borderlessButtonStyle"
        android:contentDescription="@string/complication_sw_name"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/complication_sw_background"
        android:layout_alignStart="@+id/complication_sw_background" />

    <ImageView
        android:id="@+id/complication_w_background"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/added_round_complication"
        style="?android:borderlessButtonStyle"
        android:contentDescription="@string/complication_w_name"
        android:background="@android:color/transparent"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/watch_face_background" />

    <ImageButton
        android:id="@+id/complication_w"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        style="?android:borderlessButtonStyle"
        android:contentDescription="@string/complication_w_name"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/complication_w_background"
        android:layout_alignStart="@+id/complication_w_background" />

    <ImageView
        android:id="@+id/complication_nw_background"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/added_round_complication"
        style="?android:borderlessButtonStyle"
        android:contentDescription="@string/complication_nw_name"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/watch_face_background"
        android:layout_alignStart="@+id/watch_face_background"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp" />

    <ImageButton
        android:id="@+id/complication_nw"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        style="?android:borderlessButtonStyle"
        android:contentDescription="@string/complication_nw_name"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/complication_nw_background"
        android:layout_alignStart="@+id/complication_nw_background" />

    <ImageView
        android:id="@+id/complication_center_background"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/added_round_complication"
        style="?android:borderlessButtonStyle"
        android:contentDescription="@string/complication_center_name"
        android:background="@android:color/transparent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/complication_center"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        style="?android:borderlessButtonStyle"
        android:contentDescription="@string/complication_center_name"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/complication_center_background"
        android:layout_alignStart="@+id/complication_center_background" />

</RelativeLayout>
